Fixed Links for UI Update

--- a/Frame/Layout/3_Content/greyingmob.html
+++ b/Frame/Layout/3_Content/greyingmob.html
@@ -37,7 +37,7 @@
                             <span class="img-responsive center-block InspireB IB-SoftH">&nbsp;</span>
                             <br><p>Everything from Browser, Sublime, Programs to Creation.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://www.nineneins.com/B-Topic/Tech/SoftWare','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('Tech/SoftWare','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Hardw" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                     <div class="panel">
@@ -48,7 +48,7 @@
                             <span class="img-responsive center-block InspireB IB-HardH">&nbsp;</span><br>
                             <p>Everything from MotherBoard, CPU, to Periphrials.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://www.nineneins.com/B-Topic/Tech/HardWare','popup','_blank'); return false;"><span>Read</span></a></div> 
+                                <a style="center" target="_blank" onclick="window.open('Tech/HardWare','popup','_blank'); return false;"><span>Read</span></a></div> 
                         </div></div></section>
                 <section aria-label="Ctyptow" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                     <div class="panel">
@@ -59,10 +59,11 @@
                             <span class="img-responsive center-block InspireB IB-HardH">&nbsp;</span><br>
                             <p>Everything Crypto, Why, and Reasoning.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://www.nineneins.com/B-Topic/Tech/CryptoTalk','popup','_blank'); return false;"><span>Read</span></a></div> 
+                                <a style="center" target="_blank" onclick="window.open('Tech/CryptoTalk','popup','_blank'); return false;"><span>Read</span></a></div> 
                         </div></div></section>
         <!--Recom End-->
                     </div></div></section></div></div>
+
     <!--NatSoc Topic-->        
         <div class="content panel-body">
             <div class="content-inner 9touch">
@@ -84,7 +85,7 @@
                             <span class="img-responsive center-block InspireB IB-BookH">&nbsp;</span><br>
                             <p>A Library of Literature.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://www.nineneins.com/B-Topic/NatSoc/books','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('NatSoc/books','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Manie" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -95,7 +96,7 @@
                             <span class="img-responsive center-block InspireB IB-SaintH">&nbsp;</span><br>
                             <p>A Collection of Words.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://www.nineneins.com/B-Topic/NatSoc/saints','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('NatSoc/saints','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Vide" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -106,7 +107,7 @@
                             <span class="img-responsive center-block InspireB IB-VidH">&nbsp;</span><br>
                             <p>An Archive of Videos.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://www.nineneins.com/B-Topic/NatSoc/video','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('NatSoc/video','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Muse" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -117,7 +118,7 @@
                             <span class="img-responsive center-block InspireB IB-MusicH">&nbsp;</span><br>
                             <p>A Playlist of Lyrics.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://www.nineneins.com/B-Topic/NatSoc/music','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('NatSoc/music','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Gamee" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -128,7 +129,7 @@
                             <span class="img-responsive center-block InspireB IB-GameH">&nbsp;</span><br>
                             <p>A Set of Predecessors.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://www.nineneins.com/B-Topic/NatSoc/arcade','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('NatSoc/arcade','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Filme" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -139,7 +140,7 @@
                             <span class="img-responsive center-block InspireB IB-MovieH">&nbsp;</span><br>
                             <p>An Inspiration of Works.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://www.nineneins.com/B-Topic/NatSoc/inspiration','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('NatSoc/inspiration','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
         <!--NatSoc End-->
                     </div></section></div></div>
@@ -181,7 +182,7 @@
                             </span><br>
                             <p>Everything Code</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://www.nineneins.com/B-Topic/GreyingError/Code/FashCode','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('GreyingError/Code/FashCode','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="FPE" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                     <div class="panel">
@@ -191,7 +192,7 @@
                             <span class="img-responsive center-block InspireB IB-PhotoH">&nbsp;</span><br>
                             <p>Everything Visuals</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://www.nineneins.com/B-Topic/GreyingError/Graphic/FashPhoto','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('GreyingError/Graphic/FashPhoto','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="FAE" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                     <div class="panel">
@@ -201,7 +202,7 @@
                             <span class="img-responsive center-block InspireB IB-AudioH">&nbsp;</span><br>
                             <p>Everything Audio.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://www.nineneins.com/B-Topic/GreyingError/Music/FashAlong','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('GreyingError/Music/FashAlong','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
         <!--Fash End-->
                     </div></div></section></div></div>
@@ -274,6 +275,7 @@
                         </div>
         <!--LNST Menu End-->
                     </section>
+    
     <!--Open -->
             <div id="LNSTGREY" class="panel-collapse collapse">
     <!--Contain-->
@@ -287,7 +289,7 @@
                             <span class="img-responsive center-block InspireB ls-LNSTBthum">&nbsp;</span><br>
                             <p>The adventure starts here.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="popup" onclick="window.open('GreyingError/LNST/Synopsis','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="LNSTShieItem" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -307,7 +309,7 @@
                             <span class="img-responsive center-block InspireB tl-LNSTBthum">&nbsp;</span><br>
                             <p>Time is one of my favorite topics!</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="popup" onclick="window.open('GreyingError/LNST/TimeLine','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="LNSTForced" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -317,7 +319,7 @@
                             <span class="img-responsive center-block InspireB lf-LNSTBthum">&nbsp;</span><br>
                             <p>The most iconic symbol in the gaming world.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="popup" onclick="window.open('GreyingError/LNST/TriForce','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="LNSTGenes" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -327,7 +329,7 @@
                             <span class="img-responsive center-block InspireB lr-LNSTBthum">&nbsp;</span><br>
                             <p>Race is real, race matters, race is everything!</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="popup" onclick="window.open('GreyingError/LNST/Race','popup','_blank'); return false;"><span>Read</span></a></div>
                             </div></div></section>
                 <section aria-label="LNSTChrist" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -337,7 +339,7 @@
                             <span class="img-responsive center-block InspireB lc-LNSTBthum">&nbsp;</span><br>
                             <p>Did Zelda leave anything out? No!</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="popup" onclick="window.open('GreyingError/LNST/Religion','popup','_blank'); return false;"><span>Read</span></a></div>
                             </div></div></section>
         <!--LNST END --> 
                         </div></div></section></div></div>
