--- a/Frame/Layout/3_Content/Music/musicmob.html
+++ b/Frame/Layout/3_Content/Music/musicmob.html
@@ -25,7 +25,7 @@
                 <div class="panel">
                     <div class="panel-body">
                         <h2>Woke Alone</h2>               
-                        <span class="img-responsive img-circle center-block musicm mm-BWA">&nbsp;</span>
+                        <span class="img-responsive center-block musicm mm-BWA">&nbsp;</span>
                         <div class="btn-1 center-block">
                             <a class="btn-readmore button" target="popup" onclick="window.open('https://mega.nz/folder/bO5F3BAR#Y_XX4jG4piS5MjJVnUocqg' , 'popup','width=600,height=600'); return false;"><span>Album</span></a></div>  
                 </div></div></section>
@@ -33,7 +33,7 @@
                 <div class="panel">
                     <div class="panel-body"> 
                         <h2>Mein Kampf 1-2</h2>
-                        <span class="img-responsive img-circle center-block musicm mm-BKM">&nbsp;</span>
+                        <span class="img-responsive center-block musicm mm-BKM">&nbsp;</span>
                         <div class="btn-1 center-block">
                             <a class="btn-readmore button" href="https://mega.nz/#F!POh1FRgY!fkPyYf2JEtngJXvEwa7Q-w" target="_blank"><span>Album</span></a></div>
                 </div></div></section>   
@@ -41,7 +41,7 @@
                 <div class="panel">
                     <div class="panel-body"> 
                         <h2>Screw Optics</h2>
-                        <span class="img-responsive img-circle center-block musicm mm-BSO">&nbsp;</span>
+                        <span class="img-responsive center-block musicm mm-BSO">&nbsp;</span>
                         <div class="btn-1 center-block">
                             <a class="btn-readmore button" href="https://mega.nz/folder/nSpnmTRI#pafuL3UJbitqlLnr1fX3UA" target="_blank"><span>Album</span></a></div>
                 </div></div></section>    
@@ -49,7 +49,7 @@
                 <div class="panel">
                     <div class="panel-body"> 
                         <h2>Nazi Goes To Africa</h2>
-                        <span class="img-responsive img-circle center-block musicm mm-BNGA">&nbsp;</span>
+                        <span class="img-responsive center-block musicm mm-BNGA">&nbsp;</span>
                         <div class="btn-1 center-block">
                             <a class="btn-readmore button" href="https://mega.nz/folder/bbgjzD7C#MHzI92WEkbDYYsw_jkEJ3Q" target="_blank"><span>Album</span></a></div>
                 </div></div></section>  
@@ -74,7 +74,7 @@
                     <div class="panel">
                         <div class="panel-body">
                             <h2>Enema Caliphate</h2>
-                            <span class="img-responsive img-circle center-block musicm mm-REOC">&nbsp;</span>
+                            <span class="img-responsive center-block musicm mm-REOC">&nbsp;</span>
 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" href="https://mega.nz/folder/qTxwjLwA#OkWFuOPPZgscyeLic-oy8A" target="_blank"><span>Album</span></a></div>  
@@ -83,7 +83,7 @@
                     <div class="panel">
                         <div class="panel-body">
                             <h2>Cloak and Burka</h2>
-                            <span class="img-responsive img-circle center-block musicm mm-RCB">&nbsp;</span>
+                            <span class="img-responsive center-block musicm mm-RCB">&nbsp;</span>
 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" href="https://mega.nz/folder/ufomFR5Y#GWjlm2ZXODo6AUmPsJxSWA" target="_blank"><span>Album</span></a></div> 
@@ -92,7 +92,7 @@
                     <div class="panel">
                         <div class="panel-body">
                             <h2>RWDSE</h2>
-                            <span class="img-responsive img-circle center-block musicm mm-RWDS">&nbsp;</span>
+                            <span class="img-responsive center-block musicm mm-RWDS">&nbsp;</span>
 
                             <div class="btn-1 center-block">
                                 <a class="btn-readmore button" href="https://mega.nz/folder/7HgWUT4B#isvjn89tzls9h1JttYO2CQ" target="_blank"><span>Album</span></a></div>
@@ -118,7 +118,7 @@
                 <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <span class="img-responsive img-circle center-block musicm mm-MOR">&nbsp;</span>
+                            <span class="img-responsive center-block musicm mm-MOR">&nbsp;</span>
                             <h2>14 Hatey Hate</h2>
 
                             <div class="btn-1 center-block">
@@ -145,7 +145,7 @@
                 <div class="panel">
                     <div class="panel-body">
                         <h2>TGSNT</h2>
-                        <span class="img-responsive img-circle center-block musicm mm-GST">&nbsp;</span>
+                        <span class="img-responsive center-block musicm mm-GST">&nbsp;</span>
                         <div class="btn-1 center-block">
                             <a class="btn-readmore button" href="https://mega.nz/folder/OHBS1BgJ#oLo_FcjtbciNx_k7Ld4_fg" target="_blank"><span>Album</span></a></div>
                         </div></div></section>
