--- a/Frame/Layout/3_Content/videomob.html
+++ b/Frame/Layout/3_Content/videomob.html
@@ -33,7 +33,7 @@
                 <section aria-label="Christos" class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>William Fink</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive center-block videom vm-Christogenea">&nbsp;</span>
                             <br>
                             <div class="btn-1 center-block">
@@ -44,7 +44,7 @@
                 <section aria-label="WhiteTuber" class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>WhiteTalk</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive center-block videom vm-WhiteTube">&nbsp;</span><br>
                             <div class="btn-1 center-block">
                                 <a href="https://odysee.com/@Mr_White_Tuber:4" target="popup"><span>Odysee</span></a>
@@ -55,7 +55,7 @@
                 <section aria-label="Tgnst" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>TGSNT</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive center-block videom vm-AHGSNT">&nbsp;</span><br>
                             <div class="btn-1 center-block">
                                 <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/embed/mZpeJkSNjcA3','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
@@ -64,7 +64,7 @@
                 <section aria-label="ETLB" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Europa</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive center-block videom vm-Europa">&nbsp;</span><br>
                             <div class="btn-1 center-block">
                                 <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/embed/1eLtWtEZHyie','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
@@ -73,7 +73,7 @@
                 <section aria-label="100P" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>TruthVids</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive center-block videom vm-100P">&nbsp;</span><br>
                             <div class="btn-1 center-block">
                                 <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/embed/RfnQjaSueft7/','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
@@ -82,7 +82,7 @@
                 <section aria-label="HeSt" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>HellStorm</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive center-block videom vm-HSTO">&nbsp;</span><br>
                             <div class="btn-1 center-block">
                                 <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/embed/kJimxPEGb2Wf/','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
@@ -91,7 +91,7 @@
                 <section aria-label="BHHSA" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>South Africa</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive center-block videom vm-BHHSA">&nbsp;</span><br>
                             <div class="btn-1 center-block">
                                 <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/video/JxtqiWuJJlSz/','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
@@ -100,7 +100,7 @@
                 <section aria-label="Rockw" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>RockWell</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive center-block videom vm-GLR">&nbsp;</span><br>
                             <div class="btn-1 center-block">
                                 <a style="center" target="popup" onclick="window.open('https://www.bitchute.com/video/JmVQy32hauq4/','popup','width=600,height=600'); return false;"><span>Watch</span></a><br>
